--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "ioredis": "^4.14.1",
+        "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.0"
     }
 }
