--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express": "^4.17.1",
         "ioredis": "^4.14.1",
         "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0"
+        "socket.io-client": "^2.3.0",
+        "style.js": "0.0.2"
     }
 }
