--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "emoji-mart-vue": "^2.6.6",
         "express": "^4.17.1",
         "ioredis": "^4.14.1",
+        "magnific-popup": "^1.1.0",
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0",
         "style.js": "0.0.2"
